[project]
name = "deep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[accept-rom-license,atari,classic-control]==0.29.1",
    "moviepy==1.0.3",
    "mypy==1.8.0",
    "numpy<2",
    "opencv-python==4.10.0.84",
    "ptan==0.8.1",
    "pytest>=9.0.1",
    "pytorch-ignite==0.5.1",
    "ray[tune]==2.37.0",
    "stable-baselines3==2.3.2",
    "tensorboard==2.18.0",
    "torch==2.5.0",
    "torchrl==0.6.0",
    "torchvision==0.20.0",
]
